# routes/employeesRoutes.js
@@ -2,15 +2,16 @@ const express = require('express');
 const router = express.Router();
 const { authenticateToken } = require('../middlewares/authenticateToken');
 
+const { getAll, signup, deleteEmployee, updateEmployee, login, logout, getEmployeeByToken, getEmployeeById } = require('../controllers/employeesController');
 
-const { getAll, signup, deleteEmployee, updateEmployee, login, logout } = require('../controllers/employeesController');
-
-router.get("/employees", authenticateToken, getAll);
-router.post("/signup", signup);
-router.delete("/delete", authenticateToken, deleteEmployee);
-router.put("/update", authenticateToken, updateEmployee)
-router.post("/login", login);
-router.post("/logout", authenticateToken, logout);
+router.get('/employees', authenticateToken, getAll);
+router.post('/signup', signup);
+router.delete('/delete', authenticateToken, deleteEmployee);
+router.put('/update', authenticateToken, updateEmployee);
+router.post('/login', login);
+router.post('/logout', authenticateToken, logout);
+router.get('/by-token', authenticateToken, getEmployeeByToken);
+router.get('/by-id', authenticateToken, getEmployeeById);
 
 
 module.exports = router;
